syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.sep3.grpc";
option java_outer_classname = "PurchaseServiceProto";

package proto;

import "google/type/date.proto";
import "google/protobuf/empty.proto";


service PurchaseService {
  rpc AddPurchase(AddPurchaseRequest) returns (AddPurchaseResponse);
  rpc GetPurchaseById(PurchaseIdRequest) returns (PurchaseResponse);
  rpc GetAllPurchases(google.protobuf.Empty) returns (PurchaseList);
}

message AddPurchaseRequest {
  string offerId = 1;
  string userId = 2;
  int32 quantity = 3;
  google.type.Date purchaseDate = 4;
}

message AddPurchaseResponse {
  string id = 1;
  string offerId = 2;
  string userId = 3;
  int32 quantity = 4;
  google.type.Date purchaseDate = 5;
}

message PurchaseIdRequest {
  string id = 1;
}

message PurchaseResponse {
  string id = 1;
  string offerId = 2;
  string userId = 3;
  int32 quantity = 4;
  google.type.Date purchaseDate = 5;
}

message PurchaseList {
  repeated PurchaseResponse purchases = 1;
}